Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.6
-
None
-
Patch Available
Description
PHP version of thrift hold many bugs:
1). Incorrect work with ZTS
2). Hung when work throw thrift framed transport
3). Memleak in protocol_writeMessageBegin
4). Hung when server close connection, and when php code try reuse same connection
5). Impossible pass really long values on 32 bit platforms
Attachments
Attachments
Issue Links
- is duplicated by
-
THRIFT-729 I64 types improperly written via TBinaryProtocolAccelerated
- Closed